プロダクト情報の追加

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
+    "name": "ha1t/php-Services_Photozou",
+    "type": "library",
     "require": {
+        "php": ">=5.4",
         "guzzlehttp/guzzle": "~4"
     }
 }
