autoload設定の追加

--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
     "require": {
         "php": ">=5.4",
         "guzzlehttp/guzzle": "~4"
+    },
+    "autoload": {
+        "psr-0": { "Services": "." }
     }
 }
