--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ php:
   - 5.4
   - 5.5
 
+before_script:
+  - php composer.phar install --dev --no-interaction
+
 script:
   - find . -type f -name *.php | xargs -n1 php -l
   - phpunit --coverage-text -c ./tests/phpunit.xml
