--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": ">=5.4",
         "guzzlehttp/guzzle": "~4"
     },
+    "require-dev": {
+        "satooshi/php-coveralls": "dev-master"
+    },
     "autoload": {
         "psr-0": { "Services": "." }
     }
